<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/headline"
		/>
	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/headline"
		/>
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/content"
		/>
	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/content"
		android:singleLine="false"
		android:lines="5"
		android:gravity="top"
		/>
	
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="saveNote"
		android:text="@string/save"
		/>
</LinearLayout>
